@@ -1,18 +1,22 @@
 package io.openaev.api.threat_arsenal;
 
+import static io.openaev.service.UserService.buildAuthenticationToken;
 import static io.openaev.utils.JsonTestUtils.asJsonString;
 import static io.openaev.utils.StringUtils.DUPLICATE_SUFFIX;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.hamcrest.Matchers.*;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.junit.jupiter.api.TestInstance.Lifecycle.PER_CLASS;
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.authentication;
 import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 import com.jayway.jsonpath.JsonPath;
 import io.openaev.IntegrationTest;
 import io.openaev.api.threat_arsenal.dto.ThreatArsenalActionCreateInput;
 import io.openaev.api.threat_arsenal.dto.ThreatArsenalActionUpdateInput;
+import io.openaev.collectors.utils.CollectorsUtils;
 import io.openaev.database.model.*;
 import io.openaev.database.model.Tag;
 import io.openaev.database.repository.CollectorRepository;
@@ -20,13 +24,14 @@ import io.openaev.database.repository.DocumentRepository;
 import io.openaev.database.repository.InjectorContractRepository;
 import io.openaev.database.repository.PayloadRepository;
 import io.openaev.ee.EnterpriseEditionService;
-import io.openaev.integration.Manager;
 import io.openaev.integration.impl.injectors.openaev.OpenaevInjectorIntegrationFactory;
 import io.openaev.utils.fixtures.*;
 import io.openaev.utils.fixtures.composers.*;
 import io.openaev.utils.fixtures.files.AttackPatternFixture;
+import io.openaev.utils.helpers.UserTestHelper;
 import io.openaev.utils.mockUser.WithMockUser;
 import io.openaev.utils.pagination.SearchPaginationInput;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Stream;
@@ -36,6 +41,7 @@ import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
+import org.springframework.security.core.Authentication;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.transaction.annotation.Transactional;
@@ -45,6 +51,7 @@ import org.springframework.transaction.annotation.Transactional;
 public class ThreatArsenalApiTest extends IntegrationTest {
 
   private static final String THREAT_ARSENAL_URI = "/api/threat_arsenals";
+  private static final String TENANT_THREAT_ARSENAL_URI = "/api/tenants/{tenantId}/threat_arsenals";
   private static Document EXECUTABLE_FILE;
 
   @Autowired private MockMvc mvc;
@@ -60,16 +67,21 @@ public class ThreatArsenalApiTest extends IntegrationTest {
   @Autowired private AttackPatternComposer attackPatternComposer;
   @Autowired private InjectorContractComposer injectorContractComposer;
   @Autowired private InjectorFixture injectorFixture;
+  @Autowired private DetectionRemediationComposer detectionRemediationComposer;
+  @Autowired private CollectorTypeComposer collectorTypeComposer;
+  @Autowired private UserTestHelper userTestHelper;
 
   @MockitoBean private EnterpriseEditionService enterpriseEditionService;
 
   @BeforeEach
   void beforeEach() throws Exception {
-    new Manager(List.of(openaevInjectorIntegrationFactory)).monitorIntegrations();
+    openaevInjectorIntegrationFactory.registerConnectorForTenant();
     injectorContractComposer.reset();
     attackPatternComposer.reset();
     tagComposer.reset();
     domainComposer.reset();
+    detectionRemediationComposer.reset();
+    collectorTypeComposer.reset();
   }
 
   @BeforeAll
@@ -548,6 +560,106 @@ public class ThreatArsenalApiTest extends IntegrationTest {
   }
 
   @Nested
+  @DisplayName("Search Threat Arsenal Actions with different user access right")
+  class SearchThreatArsenalActionsWithDifferentUsersAccessRight {
+    private int preExistingContractsCount;
+    private List<InjectorContract> injectorContractsCreated = new ArrayList<>();
+
+    private InjectorContract createStaticInjectorContract() {
+      InjectorContractComposer.Composer icComposer =
+          injectorContractComposer
+              .forInjectorContract(InjectorContractFixture.createDefaultInjectorContract())
+              .withDomain(domainComposer.forDomain(DomainFixture.getRandomDomain()).persist())
+              .withInjector(injectorFixture.getWellKnownOaevImplantInjector());
+      return icComposer.persist().get();
+    }
+
+    @BeforeEach
+    void setUp() {
+      injectorContractsCreated.clear();
+      preExistingContractsCount = (int) injectorContractRepository.count();
+      injectorContractsCreated.add(createStaticInjectorContract());
+      injectorContractsCreated.add(createStaticInjectorContract());
+      injectorContractsCreated.add(createStaticInjectorContract());
+    }
+
+    private static Stream<Arguments> userTestCases() {
+      return Stream.of(
+          Arguments.of(
+              "User with no groups",
+              UserTestHelper.UserType.NO_GROUPS,
+              0, // number of granted threat Arsenal action
+              false // shouldSeeAllContracts
+              ),
+          Arguments.of(
+              "Admin user",
+              UserTestHelper.UserType.ADMIN,
+              0, // number of granted threat Arsenal action
+              true // Admin sees all
+              ),
+          Arguments.of(
+              "User with BYPASS capability",
+              UserTestHelper.UserType.WITH_BYPASS,
+              0, // number of granted threat Arsenal action
+              true // BYPASS users should see all
+              ),
+          Arguments.of(
+              "User with ACCESS_THREAT_ARSENALS capability",
+              UserTestHelper.UserType.WITH_ACCESS_THREAT_ARSENALS,
+              0, // number of granted threat Arsenal action
+              true // ACCESS_THREAT_ARSENALS users should see all actions
+              ),
+          Arguments.of(
+              "User with OBSERVER grant on threat arsenal",
+              UserTestHelper.UserType.NO_GROUPS,
+              2, // number of granted threat Arsenal action
+              false // users should see granted actions only
+              ));
+    }
+
+    @ParameterizedTest(name = "{index} - {0}")
+    @MethodSource("userTestCases")
+    @DisplayName("GET /threat-arsenals - Test access control for different user types")
+    void given_user_should_searchThreatArsenal(
+        String testCase,
+        UserTestHelper.UserType userType,
+        int grantedActionNumber,
+        boolean shouldSeeAllContracts)
+        throws Exception {
+
+      List<String> grantedResourceIds = new ArrayList<>();
+      for (int i = 0; i < grantedActionNumber; i++) {
+        grantedResourceIds.add(injectorContractsCreated.get(i).getId());
+      }
+      // Create test user based on type
+      User testUser = userTestHelper.createTestUser(userType, grantedResourceIds).persist().get();
+      Authentication auth = buildAuthenticationToken(testUser);
+
+      String response =
+          mvc.perform(
+                  post(THREAT_ARSENAL_URI + "/search")
+                      .with(authentication(auth))
+                      .with(csrf())
+                      .contentType(MediaType.APPLICATION_JSON)
+                      .content(asJsonString(PaginationFixture.getDefault().build())))
+              .andExpect(status().isOk())
+              .andReturn()
+              .getResponse()
+              .getContentAsString();
+
+      // Verify the response based on user permissions
+      int totalElements = JsonPath.read(response, "$.totalElements");
+      if (shouldSeeAllContracts) {
+        // Admin, BYPASS, ACCESS_THREAT_ARSENALS users see everything
+        assertEquals(preExistingContractsCount + 3, totalElements);
+      } else {
+        // User with no groups only sees contracts granted
+        assertEquals(grantedActionNumber, totalElements);
+      }
+    }
+  }
+
+  @Nested
   @WithMockUser(isAdmin = true)
   @DisplayName("Update Threat Arsenal Action")
   class UpdateThreatArsenalAction {
@@ -625,10 +737,17 @@ public class ThreatArsenalApiTest extends IntegrationTest {
     }
 
     @Test
-    @DisplayName("Updating a non-payload injector contract should fail with NOT FOUND")
-    void given_nonPayloadContract_should_returnNotFound() throws Exception {
+    @DisplayName(
+        "Updating a non-payload injector contract should only work with tags domains and TTP")
+    void given_nonPayloadContract_should_onlyUpdateDomainTagAndTTP() throws Exception {
       // Arrange — create a non-payload injector contract via composer
       Domain domain = domainComposer.forDomain(DomainFixture.getRandomDomain()).persist().get();
+      Tag tag = tagComposer.forTag(TagFixture.getTagWithText("New tag")).persist().get();
+      AttackPattern attackPattern =
+          attackPatternComposer
+              .forAttackPattern(AttackPatternFixture.createDefaultAttackPattern())
+              .persist()
+              .get();
       InjectorContract nonPayloadContract =
           injectorContractComposer
               .forInjectorContract(InjectorContractFixture.createDefaultInjectorContract())
@@ -653,8 +772,8 @@ public class ThreatArsenalApiTest extends IntegrationTest {
               null,
               null,
               null,
-              Collections.emptyList(),
-              Collections.emptyList(),
+              List.of(tag.getId()),
+              List.of(attackPattern.getId()),
               null,
               null,
               List.of(domain.getId()));
@@ -665,7 +784,24 @@ public class ThreatArsenalApiTest extends IntegrationTest {
                   .with(csrf())
                   .contentType(MediaType.APPLICATION_JSON)
                   .content(asJsonString(updateInput)))
-          .andExpect(status().isNotFound());
+          .andExpect(status().is2xxSuccessful());
+
+      // Assert
+      InjectorContract injectorContractUpdated =
+          injectorContractRepository.findById(nonPayloadContract.getId()).orElse(null);
+      assertNotNull(injectorContractUpdated);
+      assertEquals(
+          nonPayloadContract.getLabels(),
+          injectorContractUpdated.getLabels(),
+          "Labels should remain unchanged for non-payload contracts");
+      assertEquals(1, injectorContractUpdated.getDomains().size());
+      assertEquals(domain.getId(), injectorContractUpdated.getDomains().iterator().next().getId());
+      assertEquals(1, injectorContractUpdated.getAttackPatterns().size());
+      assertEquals(
+          attackPattern.getId(),
+          injectorContractUpdated.getAttackPatterns().iterator().next().getId());
+      assertEquals(1, injectorContractUpdated.getTags().size());
+      assertEquals(tag.getId(), injectorContractUpdated.getTags().iterator().next().getId());
     }
 
     @Test
@@ -880,6 +1016,164 @@ public class ThreatArsenalApiTest extends IntegrationTest {
       assertNotNull(duplicatePayload);
       assertEquals(createInput.name() + DUPLICATE_SUFFIX, duplicatePayload.getName());
       assertEquals(createInput.content(), ((Command) duplicatePayload).getContent());
+    }
+  }
+
+  @Nested
+  @WithMockUser(isAdmin = true)
+  @DisplayName("Delete Threat Arsenal Action")
+  class DeleteThreatArsenalAction {
+    @Test
+    @DisplayName("Deleting a non-payload-based action should fail with BAD REQUEST")
+    void given_nonPayloadContract_should_returnFailed() throws Exception {
+      // Arrange
+      Injector emailInjector = injectorFixture.getWellKnownEmailInjector(false);
+      InjectorContract nonPayloadContract =
+          injectorContractComposer
+              .forInjectorContract(InjectorContractFixture.createDefaultInjectorContract())
+              .withInjector(emailInjector)
+              .withDomain(domainComposer.forDomain(DomainFixture.getRandomDomain()))
+              .persist()
+              .get();
+
+      // Act & Assert
+      mvc.perform(
+              delete(tenantUri(TENANT_THREAT_ARSENAL_URI + "/" + nonPayloadContract.getId()))
+                  .with(csrf())
+                  .contentType(MediaType.APPLICATION_JSON))
+          .andExpect(status().isNotFound())
+          .andExpect(
+              content().string(containsString("Only payload-based actions can be deleted.")));
+    }
+
+    @Test
+    @DisplayName("Payload-based deletion should complete successfully.")
+    void given_existingPayloadAction_should_delete() throws Exception {
+      // Arrange — create and delete
+      Domain domain = domainComposer.forDomain(DomainFixture.getRandomDomain()).persist().get();
+      ThreatArsenalActionCreateInput createInput =
+          ThreatArsenalInputFixture.createDefaultCommandLineAction(List.of(domain.getId()));
+
+      String createResponse =
+          mvc.perform(
+                  post(tenantUri(TENANT_THREAT_ARSENAL_URI))
+                      .with(csrf())
+                      .contentType(MediaType.APPLICATION_JSON)
+                      .content(asJsonString(createInput)))
+              .andExpect(status().is2xxSuccessful())
+              .andReturn()
+              .getResponse()
+              .getContentAsString();
+
+      String originalActionId = JsonPath.read(createResponse, "$.injector_contract_id");
+
+      // Flush and clear to force Hibernate to reload from DB with discriminator column set
+      entityManager.flush();
+      entityManager.clear();
+
+      mvc.perform(
+              delete(tenantUri(TENANT_THREAT_ARSENAL_URI + "/" + originalActionId))
+                  .with(csrf())
+                  .contentType(MediaType.APPLICATION_JSON))
+          .andExpect(status().is2xxSuccessful());
+    }
+  }
+
+  @Nested
+  @WithMockUser(isAdmin = true)
+  @DisplayName("Get collector used in action remediation")
+  class GetCollectorForActionRemediation {
+
+    @Test
+    @DisplayName("Getting collectors for a non-payload-based action should fail")
+    void given_nonPayloadContract_should_returnFailed() throws Exception {
+      // Arrange
+      Injector emailInjector = injectorFixture.getWellKnownEmailInjector(false);
+      InjectorContract nonPayloadContract =
+          injectorContractComposer
+              .forInjectorContract(InjectorContractFixture.createDefaultInjectorContract())
+              .withInjector(emailInjector)
+              .withDomain(domainComposer.forDomain(DomainFixture.getRandomDomain()))
+              .persist()
+              .get();
+
+      // Act & Assert
+      mvc.perform(
+              get(tenantUri(
+                      TENANT_THREAT_ARSENAL_URI + "/" + nonPayloadContract.getId() + "/collectors"))
+                  .with(csrf())
+                  .contentType(MediaType.APPLICATION_JSON))
+          .andExpect(status().isNotFound())
+          .andExpect(
+              content()
+                  .string(
+                      containsString(
+                          "Only payload-based injector contracts can provide collectors for action remediation.")));
+    }
+
+    @Test
+    @DisplayName(
+        "Getting collectors for a payload-based action should return the associated collectors")
+    void given_nonPayloadContract_should_returnCollectorsForActionRemediation() throws Exception {
+      // Arrange — create and delete
+      Injector oaevImplantInjector = injectorFixture.getWellKnownOaevImplantInjector();
+      Collector crowdstrikeCollector =
+          collectorComposer
+              .forCollector(CollectorFixture.createDefaultCollector(CollectorsUtils.CROWDSTRIKE))
+              .persist()
+              .get();
+      Collector defenderCollector =
+          collectorComposer
+              .forCollector(
+                  CollectorFixture.createDefaultCollector(CollectorsUtils.MICROSOFT_DEFENDER))
+              .persist()
+              .get();
+      InjectorContract nonPayloadContract =
+          injectorContractComposer
+              .forInjectorContract(InjectorContractFixture.createDefaultInjectorContract())
+              .withInjector(oaevImplantInjector)
+              .withDomain(domainComposer.forDomain(DomainFixture.getRandomDomain()))
+              .withPayload(
+                  payloadComposer
+                      .forPayload(PayloadFixture.createDefaultCommand())
+                      .withDetectionRemediation(
+                          detectionRemediationComposer
+                              .forDetectionRemediation(
+                                  DetectionRemediationFixture.createDefaultDetectionRemediation())
+                              .withCollectorType(
+                                  collectorTypeComposer.forCollectorType(
+                                      CollectorTypeFixture.createCollectorType(
+                                          crowdstrikeCollector.getType()))))
+                      .withDetectionRemediation(
+                          detectionRemediationComposer
+                              .forDetectionRemediation(
+                                  DetectionRemediationFixture.createDefaultDetectionRemediation())
+                              .withCollectorType(
+                                  collectorTypeComposer.forCollectorType(
+                                      CollectorTypeFixture.createCollectorType(
+                                          defenderCollector.getType())))))
+              .persist()
+              .get();
+
+      String response =
+          mvc.perform(
+                  get(tenantUri(
+                          TENANT_THREAT_ARSENAL_URI
+                              + "/"
+                              + nonPayloadContract.getId()
+                              + "/collectors"))
+                      .with(csrf())
+                      .contentType(MediaType.APPLICATION_JSON))
+              .andExpect(status().is2xxSuccessful())
+              .andExpect(jsonPath("$.length()").value(2))
+              .andReturn()
+              .getResponse()
+              .getContentAsString();
+
+      List<String> collectorTypes = JsonPath.read(response, "$[*].collector_type");
+      assertThat(collectorTypes)
+          .containsExactlyInAnyOrder(
+              CollectorsUtils.CROWDSTRIKE, CollectorsUtils.MICROSOFT_DEFENDER);
     }
   }
 }
